<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flash Card Dispute</string>
    <string name="action_settings">Settings</string>
    <string name="stackActivityTitle">Pick a subject:</string>
    <string name="submit_button">Submit</string>
    <string name="question_sample">This is where the question goes, got it?</string>
    <string name="title_activity_show_questions">ShowQuestionsActivity</string>
    <string name="button_previous">Previous</string>
    <string name="button_submit_answer">Submit</string>
    <string name="button_next">Next</string>
    <string name="button_true">True</string>
    <string name="button_false">False</string>
    <string name="title_activity_check_answers">CheckAnswersActivity</string>
    <string name="button_refute">Refute!</string>
    <string name="done_string">Done:</string>
    <string name="date_string">Date:</string>
    <string name="add_new_refute_item_string">Refute</string>
    <string name="title_string">Refute Content</string>
    <string name="time_and_date_string">Time and Date</string>
    <string name="no_date_set_string">0000-00-00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>
    <string name="enter_title_string">Enter Refute</string>
    <string name="title_activity_refute">Refute</string>
    <string name="hello_world">Hello world!</string>

</resources>
